public/css/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");

.theme-light {
    --mainColor: rgba(88,57,133);
    --lightColor: rgba(88,57,133, 0.7);
    --lighterColor: rgba(88,57,133, 0.5);
    --superlightColor: rgba(88,57,133, 0.3);
    --bodyColor: white;
    --inputReadOnlyBorder: rgba(0, 0, 0, 0);
    --inputReadOnlyBkgrdColor: white;
}

.theme-dark {
    --mainColor: rgba(12,24,47);
    --lightColor: rgba(12,24,47, 0.7);
    --lighterColor: rgba(12,24,47, 0.5);
    --superlightColor: rgba(12,24,47, 0.3);
    --bodyColor: gray;
    --inputReadOnlyBorder: gray;
    --inputReadOnlyBkgrdColor: gray;
}

/* Global */
body {
    box-sizing: border-box;
    border-bottom: none;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: var(--bodyColor);
}

main {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

footer {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 30px;
    color: black;
    background-color: rgb(252, 247, 247);
    font-size: 12px;
}

footer>p {
    margin: 0;
}

#userNav {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    background-color: var(--mainColor);
    /* opacity: 50%; */
    color: white;
}

#userNav *{
    margin: 3px;
    font-size: 15px;
    color: white;
}

#switch{
    margin-right: auto;
    background-color: var(--mainColor);
    border-color: white;
    border-radius: 10px;
}

#loggedUserIcon {
    color: white;
}

#loggedUserSelect {
    color: var(--mainColor);
    border: none;
}


/* Login Form */
#loginMain {
    background-color: var(--superlightColor);
    display: flex;
    align-items: center;
    justify-content: center;
}

#loginForm {
    background-color: rgba(255,255,255,0.3);
    padding: 60px;
    border-radius: 30px;
    text-align: center;
}

#loginForm h1 {
    color: var(--mainColor);
    border-bottom: 2px solid var(--superlightColor);
}

#socialLogin{
    display: flex;
    flex-direction: column;
    align-items: center;
}

#socialLogin * {
    width: 20rem;
    margin-bottom: 5px;
}

#googleLogin button{
    display: flex;
    align-items: center;
    background-color: rgba(234,67,53);
    text-align: center;
    border: none;
    border-radius: 5px;
}

#facebookLogin button{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(60,88,156);
    border: none;
    border-radius: 5px;
}

#linkedIn button{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(10,102,194);
    border: none;
    border-radius: 5px;
}

#googleIcon, #fbIcon, #linkedInIcon {
    color: white;
    margin-right: 10px;
}

#googleLogin button a, #facebookLogin button a, #linkedIn button a{
    text-decoration: none;
    color: white;
}

#loginOr {
    text-align: center;
    color: var(--mainColor);
}

#userAndPwdForm {
    display: grid;
    grid-template-columns: 1fr 10fr;
    grid-template-rows: auto auto;
    grid-gap: 0.5em;
    width: 20rem;
}

#userAndPwdForm i {
    align-self: center;
    justify-self: center;
}

.userAndPwdInput{
    border: none;
    border-radius: 5px;
    padding: 10px;
}

.loginLabels {
    margin: 0;
    padding: 0;
}

#loginSubmit {
    width: 20rem;
    margin-top: 15px;
    padding: 10px;
}

























#carousel {
    min-height: 20vh;
    border-bottom: none;
    /* background-color: gray; */
}

.headerImg {
    width: 100%;
    min-height: 80%;
    object-fit: stretch;
}

.navbar {
    background-color: var(--mainColor);
    /* padding: 15px; */
}

/* .navbar-light .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' 'viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
} */

.navbar-light .navbar-toggler {
    color: white;
    border-color: white;
}
.navbar-light .navbar-brand {
    font-size: 2vw;
}

.navbar-light .navbar-nav .nav-link, .navbar-light .navbar-brand{
    color: white;
}

.navbar-light .navbar-nav .nav-link:hover{
    border-bottom: 3px solid white;
    color: white;
}

#navbarNav{
    margin-left: 0;
}

label {
    font-weight: bold;
    /* text-decoration: blue underline; */
}

.form-check-label {
    font-weight: normal;
}


/* Edit Card Page */
#cardDetails {
    display: grid;
    grid-template-columns: auto auto;
    grid-gap: 0.8rem;
    max-width: 500px;
    margin: 0 auto;
}

#add-note-form {
    display: flex;
    align-items: center;
    /* justify-content: center; */
}

#accountStatusChange,
#cardHolderChange {
    display: none;
}

input[type="text"][readonly] {
    border: 2px solid var(--inputReadOnlyBorder);
}

input[type="text"]{
    background-color: var(--inputReadOnlyBkgrdColor);
}

.table-responsive {
    border-top: 5px solid var(--mainColor);
}

.table-responsive * {
    margin: 3px;
}

.nav-item.nav-link.active {
    background-color: var(--mainColor);
    color: white;
    border-right: none;
}

.nav-item.nav-link {
    border: 1px solid var(--superlightColor);
    border-bottom: none;
    color: var(--mainColor);
    font-weight: bold;
}

.nav-tabs {
    margin-top: 5px;
}

.nav-tabs a:hover {
    background-color: var(--lightColor);
    color: white;
    border: none;
}


/* Add Users Page */
#usersPage, #editCardsPage{
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    margin: 10px 0 10px 0;
}

#addUserForm{
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 5px solid var(--lightColor);
    margin-bottom: 15px;
    padding-bottom: 15px;
}

#addUserForm * {
    min-width: 500px;
}

#currentUsers, #notes{
    display: flex;
    flex-direction: column;
    padding-left: 15px;
}

.sectionHeader {
    background-color: var(--lightColor);
    color: white;
    padding: 10px;
}

.sectionHeader {
    margin-bottom: 20px;
}

#editCardSection {
    min-width: 600px;
    border: 5px solid var(--lightColor);
    padding-bottom: 20px;
    margin-bottom: 20px;
}

h4 {
    text-align: center;
    text-decoration: blue underline;
    margin-bottom: 20px;
}

#add-note-form {
    display: flex;
    justify-content: stretch;
    align-items: stretch;
    margin-bottom: 10px;
}

textarea {
    height: 4rem;
    border: 3px solid var(--lightColor);
    border-radius: 10px;
    font-size: 18px;
    flex-grow: 2;
    margin-right: 2px;
    background-color: var(--superlightColor);
}

textarea:focus {
    background-color: white;
}


/*  Add Cards Page */

#addCardForm {
    max-width: 800px;
    margin: 40px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    grid-gap: 1.5rem;
}

#addCardForm * {
    width: 400px;
}

#addCardPage {
    max-width: 1000px;
    margin: 10px auto;
    border: 5px solid var(--lightColor);
}

.bi {
    color: var(--mainColor);
    font-size: 1.5rem;
}

i {
    margin-right: 20px;
}

#cardsTable tr:hover {
    cursor: pointer;
    /* background-color: var(--superlightColor); */
}

#creditPullDisplay {
    margin-left: 5px;
}

